--- a/html&css/webdev-Colt/16_JavaScriptDecisionMaking.html
+++ b/html&css/webdev-Colt/16_JavaScriptDecisionMaking.html
@@ -21,7 +21,28 @@
             <section id="toc">
                 <h2>Table of Contents</h2>
                 <ul id="tocList">
-                    <li><a href="#"></a></li>
+                    <li><a href="#dmwc">Decision Making With Code</a></li>
+                    <li>
+                        <a href="#co">Camparison Operators</a>
+                        <ul>
+                            <li><a href="#etvd">Equality: Triple Vs Double</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#cap">Console, Alert & Prompt</a></li>
+                    <li><a href="#rjfas">Running JavaScript from a Script</a></li>
+                    <li>
+                        <a href="#is">If Statements</a>
+                        <ul>
+                            <li><a href="#ei">Else If</a></li>
+                            <li><a href="#e">Else</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#nc">Nesting Conditions</a></li>
+                    <li><a href="#tfv">Truthy & Falsey Values</a></li>
+                    <li><a href="#la">Logical AND</a></li>
+                    <li><a href="#lo">Logical OR</a></li>
+                    <li><a href="#ln">Logical NOT</a></li>
+                    <li><a href="#tssial">The Switch statement is ... a lot</a></li>
                 </ul>
 
                 <section id="developer">
@@ -43,7 +64,7 @@
 
             <section id="notes">
                 <article>
-                    <h2 id="">Decision Making With Code</h2>
+                    <h2 id="dmwc">Decision Making With Code</h2>
                     <p>
                         Decision making with code refers to things like, if a user is signed for example, then display
                         this information. If one things equates to a certain value then something should happen. If
@@ -56,7 +77,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Comparison Operators</h2>
+                    <h2 id="co">Comparison Operators</h2>
                     <div class="example">
                         <div>
                             <ul>
@@ -96,7 +117,7 @@
                         <span class="important">Unicode</span>, where each character as a value.
                     </p>
 
-                    <h3 id="">Equality: Triple Vs. Double Equals</h3>
+                    <h3 id="etvd">Equality: Triple Vs. Double Equals</h3>
                     <p>
                         The last for comparison operators have to do with quality, they check whether or not something
                         has the same value or not. There are 2 sets, <span class="important">Doublt & Triple</span>. The
@@ -122,7 +143,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Console, Alert & Prompt</h2>
+                    <h2 id="cap">Console, Alert & Prompt</h2>
                     <div class="example">
                         <div>
                             <ul>
@@ -168,7 +189,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Running JavaScript from a script</h2>
+                    <h2 id="rjfas">Running JavaScript from a script</h2>
                     <div class="example">
                         <ul>
                             <li>
@@ -198,7 +219,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">If Statements</h2>
+                    <h2 id="is">If Statements</h2>
                     <div class="example">
                         <ul>
                             <li>
@@ -232,7 +253,7 @@
                         else, nothing will occur.
                     </p>
 
-                    <h3 id="">Else If</h3>
+                    <h3 id="ei">Else If</h3>
                     <p>
                         This brings us to the else if block. If we want more condintionals or outcomes for the same
                         condition statement, then we can add an else if statement. Looking at the primitive example
@@ -244,7 +265,7 @@
                         Its important to note that you can have as many else if if you want.
                     </p>
 
-                    <h3 id="">Else</h3>
+                    <h3 id="e">Else</h3>
                     <p>
                         Once all else if statements has been used, and the userInput didn't match any of the desired
                         results, you can place a else statement. An else state doesn not come with parenthesis and
@@ -254,7 +275,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Nesting Conditions</h2>
+                    <h2 id="nc">Nesting Conditions</h2>
                     <div class="example">
                         <ul>
                             <li>let password = prompt('Enter a password');
@@ -296,7 +317,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Truthy & Falsey Values</h2>
+                    <h2 id="tfv">Truthy & Falsey Values</h2>
                     <div class="example">
                         <ul>
                             <li>All JS values have an inherent truthyness or falsyness about them</li>
@@ -322,7 +343,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Logical AND</h2>
+                    <h2 id="la">Logical AND</h2>
                     <div class="example">
                         <div>
                             <ul>
@@ -351,7 +372,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Logical OR</h2>
+                    <h2 id="lo">Logical OR</h2>
                     <div class="example">
                         <div>
                             <ul>
@@ -405,7 +426,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Logical NOT</h2>
+                    <h2 id="ln">Logical NOT</h2>
                     <div class="example">
                         <div>
                             <ul>
@@ -429,7 +450,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">The Switch Statement Is ... A lot</h2>
+                    <h2 id="tssial">The Switch Statement Is ... A lot</h2>
                     <div class="example">
                         <ul>
                             <li>let day = 1;</li>
