add all headings and articles

--- a/html&css/webdev-Colt/17_JavaScriptsArrays.html
+++ b/html&css/webdev-Colt/17_JavaScriptsArrays.html
@@ -43,7 +43,7 @@
 
             <section id="notes">
                 <article>
-                    <h2 id="">heading</h2>
+                    <h2 id="">Introducing Arrays</h2>
                     <div class="example">
                         <ul>
                             <li></li>
@@ -55,7 +55,91 @@
                 </article>
 
                 <article>
-                    <h2 id="">heading</h2>
+                    <h2 id="">Array Random Access</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="">Push & Pop</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="">Shift & Unshift</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="">concat, indexOf, includes & reverse</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="">Slice & Splice</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="">Reference Types & Equality Testing</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="">Arrays + Const</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="">Multi-Dimensional Arrays</h2>
                     <div class="example">
                         <ul>
                             <li></li>
