--- a/html&css/webdev-Colt/17_JavaScriptsArrays.html
+++ b/html&css/webdev-Colt/17_JavaScriptsArrays.html
@@ -54,7 +54,11 @@
                     <h2 id="">Introducing Arrays</h2>
                     <div class="example">
                         <ul>
-                            <li></li>
+                            <li>const array = <span class="important">[</span><span class="important">]</span>;</li>
+                            <li>const days = <span class="important">[</span>'Monday', 'Tuesday', 'Wednesday',
+                                'Thursday', 'Friday'<span class="important">]</span>;</li>
+                            <li>const mix = <span class="important">[</span>'Weekend', true, 65, 0.99999, false<span
+                                    class="important">]</span>;</li>
                         </ul>
                     </div>
                     <p>
@@ -78,21 +82,21 @@
                     <h2 id="pp">Push & Pop</h2>
                     <div class="example">
                         <ul>
-                            <li></li>
+                            <li>arrayVar.<span class="important">push(</span>'add something at end'<span
+                                    class="important">)</span>;</li>
+                            <li>arrayVar.<span class="important">pop(</span>' remove something at end'<span
+                                    class="important">)</span>;</li>
+                            <li>arrayVar.<span class="important">shift(</span>' remove something at start'<span
+                                    class="important">)</span>;</li>
+                            <li>arrayVar.<span class="important">unshift(</span>'add something at start'<span
+                                    class="important">)</span>;</li>
                         </ul>
                     </div>
                     <p>
 
                     </p>
-                </article>
 
-                <article>
-                    <h2 id="su">Shift & Unshift</h2>
-                    <div class="example">
-                        <ul>
-                            <li></li>
-                        </ul>
-                    </div>
+                    <h3 id="su">Shift & Unshift</h3>
                     <p>
 
                     </p>
@@ -102,7 +106,14 @@
                     <h2 id="ciir">concat, indexOf, includes & reverse</h2>
                     <div class="example">
                         <ul>
-                            <li></li>
+                            <li>arrayVar.<span class="important">concat(</span>array2<span class="important">)</span>;
+                            </li>
+                            <li>arrayVar.<span class="important">indexOf(</span>'Monday'<span
+                                    class="important">)</span>;</li>
+                            <li>arrayVar.<span class="important">includes(</span>'Monday'<span
+                                    class="important">)</span>;</li>
+                            <li>arrayVar.<span class="important">reverse(</span>'Monday'<span
+                                    class="important">)</span>;</li>
                         </ul>
                     </div>
                     <p>
@@ -114,7 +125,10 @@
                     <h2 id="ss">Slice & Splice</h2>
                     <div class="example">
                         <ul>
-                            <li></li>
+                            <li>arrayVar.<span class="important">slice(</span>indexStart, [indexEnd]<span
+                                    class="important">)</span>;</li>
+                            <li>arrayVar.<span class="important">splice(</span>indexStart, deleteCount, addItem<span
+                                    class="important">)</span>;</li>
                         </ul>
                     </div>
                     <p>
