--- a/html&css/webdev-Colt/17_JavaScriptsArrays.html
+++ b/html&css/webdev-Colt/17_JavaScriptsArrays.html
@@ -62,7 +62,20 @@
                         </ul>
                     </div>
                     <p>
-
+                        Our very first data structure, JavaScript Arrays. A data structures is simply a <span
+                            class="important">collection of data</span>, can be any data type. An array is an
+                        <span class="important">order collection of values</span>. Arrays are enclosed with <span
+                            class="important">[Square Brackets]</span> and you seperate each value by a comma.
+                    </p>
+                    <p>
+                        You can assign a variable an empty array.
+                        Arrays also have an index value, unlike the index of a string where it returns a single
+                        character. This returns an entire value at whatever index was specified.
+                    </p>
+                    <p>
+                        In short, the <span class="important">2 key concepts</span> of arrays is that <span
+                            class="important">Its a collection a values</span> and second <span class="important">its an
+                            ordered collection of values</span>.
                     </p>
                 </article>
 
