--- a/html&css/webdev-Colt/17_JavaScriptsArrays.html
+++ b/html&css/webdev-Colt/17_JavaScriptsArrays.html
@@ -68,9 +68,9 @@
                             class="important">[Square Brackets]</span> and you seperate each value by a comma.
                     </p>
                     <p>
-                        You can assign a variable an empty array.
-                        Arrays also have an index value, unlike the index of a string where it returns a single
-                        character. This returns an entire value at whatever index was specified.
+                        You can assign a variable an empty array. Arrays also have an index value, unlike the index of a
+                        string where it returns a single character. This returns an entire value at whatever index was
+                        specified.
                     </p>
                     <p>
                         In short, the <span class="important">2 key concepts</span> of arrays is that <span
