--- a/html&css/webdev-Colt/17_JavaScriptsArrays.html
+++ b/html&css/webdev-Colt/17_JavaScriptsArrays.html
@@ -70,7 +70,8 @@
                     <p>
                         You can assign a variable an empty array. Arrays also have an index value, unlike the index of a
                         string where it returns a single character. This returns an entire value at whatever index was
-                        specified.
+                        specified, basically an entire value. <span class="important">You can store multiple different
+                            and seperate data types within a Array</span>.
                     </p>
                     <p>
                         In short, the <span class="important">2 key concepts</span> of arrays is that <span
