Did something cant remember what

--- a/html&css/webdev-Colt/19_RepeatingStuffWithLoops.html
+++ b/html&css/webdev-Colt/19_RepeatingStuffWithLoops.html
@@ -78,7 +78,17 @@
                         </div>
                     </div>
                     <p>
-
+                        The whole point of <span class="important">JavaScript Loops</span> is to repeat code. So instead
+                        of writing or repeating code 10x, Loops allows us to automate it and repeat the same code, or
+                        you can sum numbers together, or iterate over an array. There are multiple loop types in
+                        JavaScript. <span class="important">for loop</span>, <span class="important">while loop</span>,
+                        <span class="important">for...of loop</span> and <span class="important">for...in loop</span>.
+                    </p>
+                    <p>
+                        The <span class="important">for loop</span> has a syntax structure as follows <span
+                            class="important">1<sup>st</sup> initialExpression</span> closed be a semi-colon and then
+                        <span class="important">2 <sup>nd</sup>condition</span> again closed by a semi-colon and
+                        followed by the <span class="important">3 <sup>rd</sup>incrementalExpression</span>.
                     </p>
 
                     <h3 id="mfle">More For Loops Examples</h3>
