--- a/html&css/webdev-Colt/19_RepeatingStuffWithLoops.html
+++ b/html&css/webdev-Colt/19_RepeatingStuffWithLoops.html
@@ -85,15 +85,18 @@
                         <span class="important">for...of loop</span> and <span class="important">for...in loop</span>.
                     </p>
                     <p>
-                        The <span class="important">for loop</span> has a syntax structure as follows <span
-                            class="important">1<sup>st</sup> initialExpression</span> closed be a semi-colon and then
-                        <span class="important">2 <sup>nd</sup>condition</span> again closed by a semi-colon and
-                        followed by the <span class="important">3 <sup>rd</sup>incrementalExpression</span>.
+                        The <span class="important">for loop</span> has a syntax structure as follows: <span
+                            class="important">1<sup>st</sup></span> is the <span
+                            class="important">initialExpression</span> closed by a semi-colon and then the<span
+                            class="important">2 <sup>nd</sup></span> portion is the <span
+                            class="important">condition</span>, which again is closed by a semi-colon and followed by
+                        the <span class="important">3 <sup>rd</sup></span> portion <span
+                            class="important">incrementalExpression</span>.
                     </p>
                     <p>
-                        
+
                     </p>
-                    
+
                     <h3 id="mfle">More For Loops Examples</h3>
                     <div class="example">
                         <ul>
