added headings to section 20 html and added celsius converter function to scripts20

--- a/html&css/webdev-Colt/20_IntroducingFunctions.html
+++ b/html&css/webdev-Colt/20_IntroducingFunctions.html
@@ -45,7 +45,7 @@
 
             <section id="notes">
                 <article>
-                    <h2 id=""></h2>
+                    <h2 id="itf">Intro to Functions</h2>
                     <div class="example">
                         <ul>
                             <li></li>
@@ -57,7 +57,7 @@
                 </article>
 
                 <article>
-                    <h2 id=""></h2>
+                    <h2 id="ovff">Our Very First Function</h2>
                     <div class="example">
                         <ul>
                             <li></li>
@@ -65,6 +65,42 @@
                     </div>
                     <p>
 
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="ai">Arguments Intro</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="fwma">Functions With Multiple Arguments</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="trk">The Return Keyword</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+                        
                     </p>
                 </article>
             </section>
