added toc for section 20 of html & css

--- a/html&css/webdev-Colt/20_IntroducingFunctions.html
+++ b/html&css/webdev-Colt/20_IntroducingFunctions.html
@@ -21,9 +21,19 @@
             <section id="toc">
                 <h2>Table of Contents</h2>
                 <ul id="tocList">
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li>
+                        <a href="#">Intro to Functions</a>
+                        <ul>
+                            <li><a href="#">Our Very First Function</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Arguments Intro</a>
+                        <ul>
+                            <li><a href="#">Functions With Multiple Arguments</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">The Return Keyword</a></li>
                 </ul>
 
                 <section id="developer">
